# price-optimization

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  debug.py  pyproject.toml  simulation_config.yaml
.github/workflows/: main.yml
algorithm/: assign.py  result.py  solver_heuristic.py  solver_naive.py
data/: config_data.yaml
notebooks/: LR_breakfast.ipynb  analysis_breakfast.ipynb  experiments.ipynb  regression_breakfast.ipynb
src/: compare_exact_models.py  compare_heuristics.py  config_simulation.yaml  configs.py  iai.py  main.py  run_artificial.py  run_realworld.py  simulator.py  synthetic.py  tuner.py
src/algorithm/: assign.py  base_algorithm.py  multi_local_search.py  solver_heuristic.py  solver_naive.py
src/data_preprocess/: data_config.yaml  data_preprocessor.py  preprocessor.py
src/evaluate/: evaluator.py
src/optimization/: config_optimization.yaml  model_input.py  optimizer.py  params.py  result.py
src/optimize/: config_optimization.yaml  config_optimize.yaml  optimizer.py  params.py  predictor2model.py  result.py
src/predict/: config_predict.yaml  plot.py  predictor.py
src/predict/nn/: train.py
src/prediction/: config_prediction.yaml  config_regression.yaml
src/processing/: average_results.py  binary_tree.py  data_preprocessor.py  dict2df.py  dict2json.py  models2avg_result.py  models2time.py
src/tests/: test_POLR.py  test_POORT_LH.py  test_multi_local_search.py  test_tree.py
src/utils/: dict_converter.py  flatten_dict.py  handle_module.py  logger.py  module_handler.py  paths.py  plot.py  stop_watch.py
(+59 files in other folders)
